[package]
name = "un1ock_mintcli"
version = "0.1.0"
edition = "2021"
authors = ["bergabman"]


[dependencies]
solana-sdk = "1.10.0"
solana-client = "1.10.0"
solana-transaction-status = "1.10.0"
serde = "1.0.136"
serde_json = "1.0.79"
anyhow = "1.0.56"
metaplex-token-metadata = "0.0.1"
mpl-token-metadata = "1.2.5"
spl-associated-token-account = "1.0.3"
spl-token = "3.2.0"
# spl-token = "3.3.0"
unlock_mintinstructions = {path = "../mintinstructions/"}
prost = "0.9.0"
bytes = "1.1.0"
clap = "3.1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
arrayref = "0.3.6"

